# witenagemot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
examples/: echo.py
src/witan/: __init__.py  kernel.py  registry.py  runner.py  types.py
src/witan/channels/: __init__.py  std.py
src/witan/cli/: __init__.py  __main__.py
src/witan/kernels/: __init__.py  anthropic.py
tests/: test_channels_std.py  test_cli.py  test_kernel_anthropic.py  test_registry.py  test_runner.py  test_types.py
